<resources>
    <string name="app_name">Prj-GetGo</string>
    <string name="title_activity_maps">Map</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="bookings">Bookings</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="account">Account</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="now">Now</string>
    <string name="duration">Duration</string>
    <string name="go">Go</string>
    <string name="search_results">Search results</string>
    <string name="cars_found">cars found</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="dot">.</string>
    <string name="rental_fee">Rental fee</string>
    <string name="mileage_fee">Mileage fee</string>
    <string name="confirmed_caps">CONFIRMED</string>
    <string name="start_date">Start date</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="extend">Extend</string>
    <string name="pick_up_car_at">Pick up car at</string>
    <string name="get_direction">Get Directions</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="need_help">Need help?</string>
    <string name="cancel_this_booking">Cancel this booking</string>
</resources>