<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchResultsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/search_results"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2xx"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_icoaddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_toEndOf="@id/ivAddress"
        android:text="@string/location"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toEndOf="@id/ivAddress"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLocation"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_toEndOf="@id/ivAddress"
        android:text="@string/current_location"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toEndOf="@id/ivAddress"
        app:layout_constraintTop_toBottomOf="@id/tvLocation" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentLocation" />

    <ImageView
        android:id="@+id/ivDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_icodated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/lbDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/date_time"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toEndOf="@id/ivDate"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tvDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/now"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toEndOf="@id/ivDate"
        app:layout_constraintTop_toBottomOf="@id/lbDateAndTime" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/tvDateAndTime" />

    <View
        android:id="@+id/divider_ver_1"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        app:layout_constraintStart_toStartOf="@id/col_1"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <ImageView
        android:id="@+id/ivTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_icotime"
        app:layout_constraintStart_toEndOf="@id/divider_ver_1"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/lbDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/duration"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toEndOf="@id/ivTime"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="1 hr"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toEndOf="@id/ivTime"
        app:layout_constraintTop_toBottomOf="@id/lbDuration" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="300+"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular_2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/tvCarsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/cars_found"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toEndOf="@id/tvCount"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_round_white"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:text="@string/map"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_round_white"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_2sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_2sdp"
        android:text="@string/filter"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnMap"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>