<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/col_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vBottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvRentACar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/rent_a_car"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/col_1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivRentACar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_group23"
        app:layout_constraintBottom_toTopOf="@id/tvRentACar"
        app:layout_constraintEnd_toStartOf="@id/col_1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBookings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/bookings"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/col_2"
        app:layout_constraintStart_toEndOf="@id/col_1" />

    <ImageView
        android:id="@+id/ivBookings"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_group23"
        app:layout_constraintBottom_toTopOf="@id/tvBookings"
        app:layout_constraintEnd_toStartOf="@id/col_2"
        app:layout_constraintStart_toEndOf="@id/col_1" />

    <TextView
        android:id="@+id/tvReferAFriend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/refer_a_friend"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/col_3"
        app:layout_constraintStart_toEndOf="@id/col_2" />

    <ImageView
        android:id="@+id/ivReferAFriend"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_group23"
        app:layout_constraintBottom_toTopOf="@id/tvReferAFriend"
        app:layout_constraintEnd_toStartOf="@id/col_3"
        app:layout_constraintStart_toEndOf="@id/col_2" />

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/col_3" />

    <ImageView
        android:id="@+id/ivAccount"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_group23"
        app:layout_constraintBottom_toTopOf="@id/tvReferAFriend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/col_3" />

    <FrameLayout
        android:id="@+id/btnAlert"
        android:layout_width="@dimen/_44sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_fab"
        android:elevation="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_icoactionalert" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/vRentACar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/vBottomBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:background="@color/divider" />

            <ImageView
                android:id="@+id/ivAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/ic_icoaddress" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_toEndOf="@id/ivAddress"
                android:text="@string/location"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tvCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLocation"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@id/ivAddress"
                android:text="@string/current_location"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular" />

            <ImageView
                android:id="@+id/ivDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/ic_icodated" />

            <TextView
                android:id="@+id/lbDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_toEndOf="@id/ivDate"
                android:text="@string/date_time"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tvDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbDateAndTime"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@id/ivDate"
                android:text="@string/now"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular" />

            <View
                android:id="@+id/divider_ver"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/divider"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_toEndOf="@id/lbDateAndTime"
                android:background="@color/divider" />

            <ImageView
                android:id="@+id/ivTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_toEndOf="@id/divider_ver"
                android:src="@drawable/ic_icotime" />

            <TextView
                android:id="@+id/lbDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_toEndOf="@id/ivTime"
                android:text="@string/duration"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbDateAndTime"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_toEndOf="@id/ivTime"
                android:text="1 hr"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular" />

            <TextView
                android:id="@+id/btnGo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@id/divider"
                android:layout_alignParentEnd="true"
                android:background="@color/lightGreen"
                android:gravity="center"
                android:text="@string/go"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/btnLocate"
        android:layout_width="@dimen/_44sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_fab"
        android:elevation="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/vRentACar"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_icoactionlocate" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>